# wedding-backend

./: .gitignore  Dockerfile  README.md  Readme.md  alembic.ini  pyproject.toml  renovate.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python.yml
alembic/versions/: aaaf4ed0b3f5_feat_add_reset_password.py
app/src/: code_generator.py  email_sender.py  main.py  model.py  security.py
app/src/business_logic/: services.py
app/src/config/: app_config.py
app/src/database/: db.py  db_tables.py  models.py
app/src/database/models/: dessert_options.py  guest_role.py  guest_status.py  user_role.py  user_status.py
app/src/routes/: api_utils.py  dto.py  v1.py
app/src/setup/: populate_db.py  qr_code.py  qr_code_label_generator.py
app/src/static/html/: email_contact_message_template.html  email_verification_template.html
config/: config_development.json  config_testing.json
data/: guests.csv
data/raw/: guest_list.csv
raw/: guests.csv
src/: email_sender.py
src/business_logic/: services.py
src/database/: db.py  db_tables.py
src/database/models/: dessert_options.py  food_options.py  guest_status.py
src/routes/: api_utils.py  dto.py  v1.py
src/setup/: guest_list_generator.py  populate_db.py  qr_code.py  qr_code_label_generator.py  send_reminder.py
src/static/html/: email_password_reset.html  email_reminder_template.html  email_verification_template.html
tests/: local_smtp_server.py  register_admin.py  temporal_setup.py  test_api.py  test_contact.py  test_mail_sender.py  test_populate_db.py  test_registration_verification.py  test_service.py
