[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Rafa Molitoris <rafa.molitoris@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.0"
SQLAlchemy = "^2.0.20"
pydantic = "^2.3.0"
uvicorn = "^0.23.2"
pandas = "^2.0.3"
jinja2 = "^3.1.2"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
qrcode = "^7.4.2"
pillow = "^10.0.1"
pydantic-settings = "^2.0.3"
sqlalchemy-utils = "^0.41.1"
python-docx = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.25.1"
pylama = "^8.4.1"


[tool.poetry.group.test.dependencies]
aiosmtpd = "^1.4.4.post2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
