[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Rafa Molitoris <rafa.molitoris@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.0"
SQLAlchemy = "^2.0.20"
pydantic = "^2.3.0"
uvicorn = "^0.35.0"
pandas = "^2.0.3"
jinja2 = "^3.1.2"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
qrcode = "^7.4.2"
pillow = "^11.0.0"
pydantic-settings = "^2.0.3"
sqlalchemy-utils = "^0.42.0"
python-docx = "^1.1.0"
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
setuptools = "^75.0.0"
pylama = "^8.4.1"
alembic = "^1.13.1"
faker = "^36.0.0"


[tool.poetry.group.test.dependencies]
aiosmtpd = "^1.4.4.post2"
coverage = "^7.5.3"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
